--- a/Assignment-Calculator/Base.lproj/Main.storyboard
+++ b/Assignment-Calculator/Base.lproj/Main.storyboard
@@ -322,6 +322,9 @@
                                             <color key="baseForegroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <color key="baseBackgroundColor" red="0.61568629740000003" green="0.70588237050000002" blue="0.75294119120000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="Percent_Button_pressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W65-Yl-uyK"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
